--- a/id generator maker/styles/idLayout.css
+++ b/id generator maker/styles/idLayout.css
@@ -94,3 +94,31 @@ strong {
     font-weight: 600;
     padding: 5px 0px;
 }
+
+/* CSS for print */
+@media print {
+
+    .container mt-4, .modal-header, .modal-footer {
+        visibility: hidden;
+    }
+
+    .sidebar, .container, .modal-content {
+        visibility: hidden;
+    }
+
+    .id-preview-modal {
+        visibility: visible;
+        max-width: unset;
+        height: 100%;
+        width: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        margin: 0;
+        padding: 15px;
+    }
+}
+
+.id-preview-modal.rtl {
+    direction: rtl;
+}
