--- a/WebApplication3/styles/reports.css
+++ b/WebApplication3/styles/reports.css
@@ -4,7 +4,9 @@
     margin-left: 780px;
     z-index: 1050;
 }
-
+.body{
+    margin:0;
+}
 .center {
     text-align: center;
     background-color: forestgreen;
@@ -31,32 +33,29 @@
     }
 
 h2 {
-    font-size: 36px;
-    padding: 15px;
-    margin-left: -100px;
-    line-height: 0.5;
-    height: 50px;
-    background-color: #4C844B;
+    background-color: #4CAF50;
     color: white;
-    text-align: inherit;
+    text-align: center;
+    margin-bottom: 20px;
+    padding: 29px 0;
+    margin-left:-100px;
 }
-
 h3 {
     font-size: 18px;
 }
 .container-actions{
     display:block;
-    border-bottom:solid 1px;
 }
 .container {
     margin-top: 20px;
     border: solid 1px;
+    display:block;
 }
     .container #actions {
         float: right!important;
     }
 
-   
+
 .topnav {
     overflow: hidden;
     background-color: white;
