--- a/WebApplication3/styles/idgenerator.css
+++ b/WebApplication3/styles/idgenerator.css
@@ -1,77 +1,57 @@
-﻿﻿.container {
-    margin-left: 0; /* Set margin-left to 0 to position it at the leftmost */
-    position: relative; /* Add position relative */
-    display: flex; /* Use flexbox */
-    flex-direction: column; /* Arrange items vertically */
-    align-items: flex-start; /* Align items to the left */
-    background-color:aquamarine!important;
-}
-
-id-preview-modal {
-    display: table-cell;
-}
-
-.id-preview-modal img {
-    padding: 20px 0px;
+﻿#id-generator-search {
     display: flex;
-    margin-left: auto;
-    margin-right: auto;
-    width: 360px;
-    display: center;
-    filter: drop-shadow(0px 10px 15px #000000)
+    align-items: center;
+    gap: 10px;
 }
 
-#lrn-generate-id {
-    width: 150px;
+.search-icon {
+    width: 35px;
+    height: 35px;
+    vertical-align: middle;
+    margin: 0 5px 0px -4px;
+    border: 1px solid black;
+    border-radius: 5px;
 }
 
-#full-name-generate-id, #faculty-generate-id {
+.filter-button {
+    height: 35px;
+    border: 1px solid black;
+    background-color: white;
+    border-radius: 5px;
+}
+
+.search-container {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.search-input {
+    height: 35px;
+    border: 1px solid black;
+    background-color: white;
+    border-radius: 5px;
     width: 300px;
 }
 
-#grade-generate-id {
-    width: 50px;
+#studentTable {
+     width: 100%;
+     border-collapse: collapse;
+     margin-bottom: 20px;
 }
 
-#section-generate-id {
-    width: 170px;
-}
+    #studentTable th, #studentTable td {
+        padding: 8px;
+        text-align: left;
+    }
 
+    #studentTable th {
+        background-color: #4C844B;
+        color: #ffffff;
+    }
 
-#generate-id-column {
-    width: 130px;
-}
-
-.wrapper {
+.filter-section {
     display: flex;
-    min-height: 100vh; /* Make the wrapper at least 100% of the viewport height */
-}
-
-.sidebar {
-    width: 350px;
-    background-color: #d4f9cc; /* Green color */
-    color: #000;
-    padding-top: 20px;
-    height: 100vh; /* Make the sidebar full height of the viewport */
-}
-
-#mwnhs-banner {
-    width: 330px;
-}
-
-.content {
-    flex: 1;
-    padding: 20px;
-}
-
-
-
-@media (max-width: 768px) {
-    .wrapper {
-        flex-direction: column;
-    }
-
-    .sidebar {
-        width: 100%;
-    }
+    align-items: center;
+    gap: 5px;
 }
