--- a/WebApplication3/styles/idgenerator.css
+++ b/WebApplication3/styles/idgenerator.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     gap: 10px;
+    margin-bottom: 10px;
 }
 
 .search-icon {
@@ -13,12 +14,9 @@
     border-radius: 5px;
 }
 
-.filter-button {
-    height: 35px;
-    border: 1px solid black;
-    background-color: white;
-    border-radius: 5px;
-}
+.filter-label {
+    margin-top: 10px;
+} 
 
 .search-container {
     display: flex;
@@ -53,5 +51,5 @@
 .filter-section {
     display: flex;
     align-items: center;
-    gap: 5px;
+    gap: 10px;
 }
