--- a/WebApplication3/styles/dashboard.css
+++ b/WebApplication3/styles/dashboard.css
@@ -40,7 +40,7 @@
     color: #721c24;
 }
 body {
-    font-family: Arial, sans-serif;
+    font-family: Arial, sans-serif;0
     margin: 0;
     padding: 0;
     display: flex;
