--- a/WebApplication3/styles/reports.css
+++ b/WebApplication3/styles/reports.css
@@ -33,12 +33,12 @@
     }
 
 h2 {
-    background-color: #4CAF50;
+    background-color: #4C844B;
     color: white;
     text-align: center;
     margin-bottom: 20px;
     padding: 29px 0;
-    margin-left:-100px;
+    margin-left: -100px;
 }
 h3 {
     font-size: 18px;
