--- a/WebApplication3/styles/studentlist.css
+++ b/WebApplication3/styles/studentlist.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    background-color: #4CAF50;
+    background-color: #4C844B;
     color: white;
     text-align: center;
     margin-bottom: 20px;
@@ -23,10 +23,14 @@ header {
 .add-student-button {
     text-align: right;
     margin-bottom: 20px;
+
 }
 
     .add-student-button .btn {
         font-size: 1.1em;
+        display: block !important;
+        color:white;
+        background-color:forestgreen;
     }
 
 /* Table Styles */
@@ -37,16 +41,14 @@ header {
 }
 
     #studentTable th, #studentTable td {
-        border: 1px solid #dee2e6;
         padding: 8px;
         text-align: left;
     }
 
     #studentTable th {
-        background-color: #007bff;
+        background-color: green;
         color: white;
     }
-
 /* Modal Styles */
 .modal-header {
     background-color: #007bff;
