--- a/WebApplication3/styles/index.css
+++ b/WebApplication3/styles/index.css
@@ -12,7 +12,21 @@
     flex-direction: column;
     justify-content: space-between;
     height: 100vh; /* Make sure the left column takes the full height of the viewport */
-    background-color: #f8f8f8;
+    background-image: url(../images/MWB1.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.left-pane-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #FFFFFF; /* White */
+    opacity: 0.4; /* Adjust the opacity to your preference */
+    z-index: 1; /* Set a lower z-index */
 }
 
 .left-pane {
@@ -30,6 +44,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    z-index: 2;
 }
 
 .landing-logo {
@@ -38,15 +53,12 @@
     margin-bottom: 20px;
     margin-top: 150px;
     border-radius: 50%; /* Make the logo circular */
-    -webkit-box-shadow: 0 7px 18px rgba(0, 0, 0, 0.4); /* Add shadow to logo */
-    -moz-box-shadow: 0 7px 18px rgba(0, 0, 0, 0.4);
-    box-shadow: 0 7px 18px rgba(0, 0, 0, 0.4);
 }
 
-.landing-logo img {
-    width: 200px;
-    height: 200px;
-}
+    .landing-logo img {
+        width: 200px;
+        height: 200px;
+    }
 
 .title {
     font-size: 40px;
@@ -54,11 +66,6 @@
     color: #000000; /* Black in hex */
     margin-bottom: 20px;
     line-height: 3rem;
-    -webkit-text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); /* Add shadow to title */
-    -moz-text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-    -ms-text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-    -o-text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .search-container {
@@ -66,9 +73,6 @@
     width: 100%;
     max-width: 550px;
     height: 50px;
-    -webkit-box-shadow: 0 7px 10px rgba(0, 0, 0, 0.3); /* Add shadow to search bar container */
-    -moz-box-shadow: 0 7px 10px rgba(0, 0, 0, 0.3);
-    box-shadow: 0 7px 10px rgba(0, 0, 0, 0.3);
     border-radius: 5px; /* Add border radius to container */
 }
 
@@ -76,7 +80,7 @@
     flex: 1;
     padding: 10px;
     font-size: 16px;
-    border: 1px solid #CCCCCC; /* Light gray in hex */
+    border: 1px solid #054e00; /* Light gray in hex */
     border-radius: 5px 0 0 5px;
     border-right: none; /* Remove right border */
 }
@@ -90,7 +94,7 @@
     font-size: 16px;
     border: none;
     border-radius: 0 5px 5px 0;
-    background-color: #4C844B;
+    background-color: #054e00;
     cursor: pointer;
     transition: background-color 0.3s ease-in-out; /* Add transition for background color */
 }
@@ -115,16 +119,16 @@
     padding: 20px 0 5px 0;
     margin-top: 20px;
     text-align: center;
-    background-color: #4C844B;
     width: 120%;
     margin-left: -10%;
+    z-index: 2;
 }
 
 .footer-images {
     display: flex;
     justify-content: center;
     gap: 30px;
-    margin-bottom: 20px; /* Add some space between the images and the caption */
+    margin-bottom: 10px; /* Add some space between the images and the caption */
 }
 
 .footer-logo {
@@ -134,17 +138,18 @@
 .footer-caption {
     font-size: 14px;
     font-weight: 400;
-    color: #ffffff;
     width: 80%;
     margin: auto;
+    margin-bottom: 10px;
 }
 
 /* RIGHT PANE */
-.main-content {
-    background-image: url(../images/MWB1.png);
-    background-size: cover;
-    background-position: center;
-    border-radius: 10px; /* Add border radius */
+
+
+#landing-label {
+    font-size: 30px;
+    font-weight: 400;
+    color: #ffffff;
 }
 
 /* Disable horizontal and vertical scrolling */
@@ -152,17 +157,42 @@
     overflow: hidden;
 }
 
-/* Media Query for screens 320px or smaller */
-@media only screen and (max-width: 680px) {
-    .main-content {
-        display: none; /* Hide the right pane */
-    }
-
+/* Media query for smaller screens */
+@media (max-width: 800px) {
     .left-column {
-        width: 100%; /* Ensure the left pane takes the full width */
+        flex: 1 1 100%;
+        width: 100%;
     }
 
+    .main-content {
+        display: none;
+    }
+
+    .left-pane-content {
+        width: 100%;
+    }
+}
+
+@media (max-width: 400px) {
     .landing-logo {
         margin-top: 100px;
+        width: 150px;
+        height: 150px;
     }
+
+    .title {
+        width: 100%;
+        font-size: 35px;
+        line-height: 2.5rem;
+        margin-bottom: 30px;
+    }
+
+    .footer-images {
+        gap: 15px;
+    }
+
+    .footer-logo {
+        height: 45px;
+    }
+
 }
