--- a/WebApplication3/styles/parent-portal-placeholder.css
+++ b/WebApplication3/styles/parent-portal-placeholder.css
@@ -2,21 +2,8 @@
     height: 100%;
     margin: 0;
     padding: 0;
-    background-image: url(../images/MWB1.png);
-    background-size: cover;
-    background-position: center center;
     font-family: Poppins;
-}
-
-.overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #4C844B; /* Green */
-    opacity: 0.8; /* Adjust the opacity to your preference */
-    z-index: 1; /* Set a lower z-index */
+    background-color: #fefefe;
 }
 
 .content {
@@ -37,5 +24,5 @@
 #landing-label {
     font-size: 30px;
     font-weight: 400;
-    color: #ffffff;
+    color: #000000;
 }
