--- a/WebApplication3/styles/stud-attendance-summary.css
+++ b/WebApplication3/styles/stud-attendance-summary.css
@@ -1,11 +1,18 @@
-﻿body, html {
-    height: 100%;
+﻿body, html, form {
+    font-family: Poppins;
     margin: 0;
     padding: 0;
-    background-image: url(../images/MWB1.png);
-    background-size: cover;
-    background-position: center center;
-    font-family: Poppins;
+    height: 100%;
+    width: 100%;
+}
+
+#form1 {
+    background-color: #f8f8f8;
+    display: block;
+}
+
+.banner {
+    visibility: hidden;
 }
 
 .overlay {
@@ -14,28 +21,130 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #4C844B; /* Green */
-    opacity: 0.8; /* Adjust the opacity to your preference */
-    z-index: 1; /* Set a lower z-index */
+    background-color: rgba(255, 255, 255, 0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.banner-logo {
+    width: 80px;
+    height: 80px;
 }
 
 .content {
     position: relative;
-    z-index: 2; /* Set a higher z-index */
+    z-index: 3;
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    align-items: center;
-    text-align: center;
-    color: #000; /* Adjust the text color if needed */
-    width: 90%;
-    height: 100vh; /* Ensure content takes the full height of the viewport */
-    margin: 0 auto; /* Center horizontally */
-    padding: 20px;
+    align-items: flex-start; /* Align content to the top */
+    height: 100vh;
 }
 
-#landing-label {
-    font-size: 30px;
-    font-weight: 400;
-    color: #ffffff;
+.content-wrapper {
+    width: 110%;
+    transform: translateX(-1.5%);
+}
+
+.container {
+    width: 80%;
+    height: 94%;
+    margin-left: 7%;
+    margin-top: 3%;
+    background-color: #FFFFFF;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    text-align: center;
+}
+
+#attendance, #footer-button {
+    width: 100%;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+#heading-title {
+    width: 100%;
+    padding: 10px;
+    background-color: #054e00;
+    color: #FFFFFF;
+    font-size: 20px;
+    font-weight: 600;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+#stud-info {
+    width: 100%;
+    border: 1px solid #000000;
+    padding: 10px;
+    font-weight: 600;
+    font-size: 16px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+    #stud-info p {
+        margin: 0;
+        text-align: left;
+        font-weight: 400;
+    }
+
+    #stud-info strong {
+        font-weight: 600;
+    }
+
+#attendance-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 20px;
+}
+
+    #attendance-table, #attendance-table th, #attendance-table td {
+        border: 1px solid #000000;
+    }
+
+        #attendance-table th {
+            background-color: #054e00;
+            color: #FFFFFF;
+            font-size: 16px;
+            font-weight: 600;
+            padding: 10px;
+        }
+
+        #attendance-table td {
+            font-size: 16px;
+            font-weight: 400;
+            padding: 10px;
+        }
+
+.close-button {
+    background-color: #DAFFBD;
+    color: #000000;
+    font-weight: 600;
+    font-size: 16px;
+    width: 150px; /* Set width to 200px */
+    padding: 10px;
+    border: 1px solid #054e00;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-bottom: 10px;
+}
+
+    .close-button:hover {
+        background-color: #FFFFFF;
+        color: #000000;
+        transition: background-color 0.2s ease-in-out;
+    }
+
+@media (max-width: 800px) {
+    .banner {
+        position: relative;
+        width: 100%;
+        height: 100px;
+        background-image: url('../images/MWB1.png');
+        background-size: cover;
+        background-position: center;
+    }
 }
