--- a/WebApplication3/styles/custom.css
+++ b/WebApplication3/styles/custom.css
@@ -7,6 +7,12 @@ body {
     overflow: hidden;
 }
 
+.container {
+    margin-left: 100px;
+    padding: 10px;
+    padding-bottom: 0px;
+    box-sizing: border-box;
+}
 
 header, footer {
     margin-left: -105px;
@@ -58,7 +64,7 @@ header, footer {
     z-index: 100;
     padding: 48px 0 0; /* Adjust the top padding according to your needs */
     box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.1);
-    background-color: #D4F9CC !important; /* Add the desired color */
+    background-color: #d4edda !important; /* Add the desired color */
 }
 
 .sidebar-sticky {
@@ -101,16 +107,6 @@ img.logo {
     margin: 0 auto; /* Center the image horizontally */
 }
 
-@media (min-width: 768px) {
-    .sidebar {
-        width: 240px; /* Adjust the sidebar width according to your needs */
-        position: fixed; /* Keep sidebar fixed */
-    }
-
-    .main-content {
-
-    }
-}
 /* Logo and Title styles */
 .logo-title {
     text-align: center;
@@ -128,3 +124,33 @@ img.logo {
 }
 /* Define icon styles */
 
+
+/* Media query for responsiveness */
+
+@media (max-width: 1800px) {
+    .header h1 {
+        margin-left: 100px;
+    }
+    
+    .container {
+        margin-left: 3%;
+    }
+
+    
+}
+
+@media (max-width: 1600px) {
+    .container {
+        margin-left: 0;
+    }
+}
+
+@media (min-width: 768px) {
+    .sidebar {
+        width: 240px; /* Adjust the sidebar width according to your needs */
+        position: fixed; /* Keep sidebar fixed */
+    }
+
+    .main-content {
+    }
+}
