--- a/WebApplication3/styles/login.css
+++ b/WebApplication3/styles/login.css
@@ -27,9 +27,9 @@
 }
 
 .login-container {
+    margin-top: 50px;
     width: 90%;
-    height: 80%;
-    max-height: 700px;
+    height: 70%;
     max-width: 600px;
     padding: 40px;
     background-color: #f8f9fa;
@@ -76,11 +76,15 @@ input[type="password"] {
     border-radius: 15px;
 }
 
+input#btnLogin {
+    border: 1px solid #054e00;
+}
+
 #btnLogin {
     width: 100%;
     padding: 15px;
     font-size: 1.2rem;
-    background-color: #088525;
+    background-color: #054e00;
     color: white;
     border: none;
     border-radius: 15px;
@@ -89,14 +93,15 @@ input[type="password"] {
 }
 
     #btnLogin:hover {
-        background-color: #006400; 
+        background-color: #d4edda;
+        border: 1px solid #054e00;
+        color: #054e00;
     }
 
 /* Footer */
 
 .footer-landing {
     padding: 20px 0 5px 0;
-    margin-top: 50px;
     text-align: center;
     width: 100%;
     z-index: 2;
