--- a/WebApplication3/styles/idgenerator.css
+++ b/WebApplication3/styles/idgenerator.css
@@ -38,10 +38,76 @@ id-preview-modal {
     width: 170px;
 }
 
-
 #generate-id-column {
     width: 130px;
 }
+
+/* Search */
+
+#id-generator-search {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 20px;
+}
+
+.filter-section {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.filter-section label {
+    margin: 0;
+}
+
+.search-container {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.search-input {
+    padding: 10px;
+    height: 35px;
+    border: 1px solid black;
+    background-color: white;
+    border-radius: 5px;
+    width: 300px;
+}
+
+.search-icon {
+    height: 35px;
+    margin-left: 5px;
+}
+
+/* Table */
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 20px;
+}
+
+    table thead {
+        background-color: #054e00;
+        color: white;
+    }
+
+    table th, table td {
+        padding: 8px;
+        text-align: left;
+    }
+
+    table td {
+        padding: 5px !important;
+        vertical-align: middle !important;
+    }
+
+        table td button.btn {
+            margin: 0 !important;
+            font-size: 1rem;
+        }
 
 .wrapper {
     display: flex;
