--- a/WebApplication3/styles/reports.css
+++ b/WebApplication3/styles/reports.css
@@ -117,6 +117,11 @@ h3 {
         margin: 0px 5px;
     }
 
+#actions button {
+    border: none;
+    background: none;
+}
+
 .stud-info {
     padding: 10px;
     border: 1px solid #000;
@@ -292,7 +297,12 @@ h4 {
 }
 
 @media print {
-    h2, .topnav {
+    body {
+        background-color: #ffffff;
+    }
+    
+    body header, .header1, .actions {
         display: none;
     }
+
 }
