--- a/WebApplication3/styles/custom.css
+++ b/WebApplication3/styles/custom.css
@@ -99,6 +99,12 @@ span.nav-ul {
     color: black;
 }
 
+/* Terms and Conditions */
+#terms-and-conditions li a .nav-ul{
+    font-size: 14px;
+}
+
+
 /* Styles for logo */
 img.logo {
     max-width: 100px; /* Adjust the maximum width according to your needs */
