--- a/WebApplication3/styles/idgenerator.css
+++ b/WebApplication3/styles/idgenerator.css
@@ -109,6 +109,25 @@ table {
             font-size: 1rem;
         }
 
+#pagination-controls {
+    margin: auto;
+    display: flex;
+    align-items: center;
+}
+
+.pagination-button {
+    border: none;
+    padding: .25rem 1rem;
+    border-radius: 5px;
+    background-color: #007bff;
+    color: #ffffff;
+}
+
+#page-info {
+    padding: 0 10px;
+}
+
+
 .wrapper {
     display: flex;
     min-height: 100vh; /* Make the wrapper at least 100% of the viewport height */
@@ -141,4 +160,12 @@ table {
     .sidebar {
         width: 100%;
     }
+}
+.no-backdrop .modal-backdrop {
+    display: none;
+}
+
+/* Optional: Change backdrop color or opacity */
+.modal-backdrop {
+    background-color: rgba(0, 0, 0, 0.2); /* Adjust the opacity as needed */
 }
